# AIP_Aristotle

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PLANNED_FEATURES.md  README.md  ROADMAP.md  STATUS.md  TECH_DEBT.md  concepts_sample.yaml  pyproject.toml  worklog.md
aristotle/: AGENTS.md  __init__.py  api.py  cli.py  config.py  entrypoint.py  extension.yaml  gui.py  hooks.py  ingestor.py  session.py  sm2.py
aristotle/actors/: __init__.py  examiner.py  intake.py  mentor.py  plan_generator.py  socrates.py
aristotle/gui/: api_client.py  pages.py
aristotle/ingestion/: paper_ingestor.py  structural_analysis.py
aristotle/migrations/: M001_aristotle.sql  M002_aristotle_mastery.sql  M003_aristotle_phase_b5.sql  M004_aristotle_phase_d.sql  M005_aristotle_settings.sql  M006_curiosity_intent_class.sql  M007_aristotle_uploaded_material.sql  M008_aristotle_ingest_pipeline.sql  M009_aristotle_student_scoping.sql  M010_placement_event_answer_text.sql
aristotle/workflows/: tutoring_session_v1.yaml
docs/decisions/: ADR-000-template.md  ADR-001-aristotle-architecture.md  (+3 more)
scripts/: audit_placement_mastery.py  reset_mastery_for_concepts.py
tests/: test_aristotle_actors.py  test_aristotle_cli_api.py  test_aristotle_extension.py  test_aristotle_gui_pages.py  test_aristotle_intake.py  test_aristotle_intake_e2e.py  test_aristotle_plan_generator.py  test_aristotle_routes.py  test_aristotle_student_scoping.py  test_aristotle_tutoring.py  test_curiosity_path.py  test_import_boundary.py  test_plan_generator.py  test_retrieve_relevant_chunks.py  test_teacher_dashboard.py
(+1 files in other folders)
